--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="prova.css" ref="styles" type="text/css" />
+    <link href="./prova.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -66,6 +66,6 @@
       tincidunt dolor, sed egestas neque scelerisque.
     </blockquote>
 
-    <a href="" class="link">Leggi altro!</a>
+    <a href="#" class="link">Leggi altro!</a>
   </body>
 </html>
